@@ -981,6 +981,20 @@ function host_edit() {
 			ON (snmp_query_graph.graph_template_id = graph_templates.id)
 			WHERE (((snmp_query_graph.name) Is Null)) ORDER BY graph_templates.name");
 
+		/* omit those graph_templates, that have already been associated */
+		$keeper = array();
+		foreach ($available_graph_templates as $item) {
+			if (sizeof(db_fetch_assoc("SELECT graph_template_id FROM host_graph " .
+					" WHERE ((host_id=" . $_GET["id"] . ")" .
+					" AND (graph_template_id=" . $item["id"] ."))")) > 0) {
+				/* do nothing */
+			} else {
+				array_push($keeper, $item);
+			}
+		}
+
+		$available_graph_templates = $keeper;
+
 		$i = 0;
 		if (sizeof($selected_graph_templates) > 0) {
 		foreach ($selected_graph_templates as $item) {
